countViewNotesForAssignedUserInStudy for oracle;